# mcfpp

./: .gitignore  LICENSE  README.md  pyproject.toml
mcfpp/: __init__.py
mcfpp/compiler/: __init__.py  pipeline.py
mcfpp/compiler/modules/: __init__.py  base.py  entity.py  player.py  score.py  server.py
mcfpp/compiler/preprocessor/: preprocessor.py
mcfpp/compiler/preprocessor/runners/: __init__.py  base.py  prettier.py
mcfpp/lang/: __init__.py  event.py  scoreboard.py  units.py
mcfpp/lib/: __init__.py
mcfpp/lib/display_entity/: __init__.py  display.py  structs.py  utils.py
mcfpp/lib/nbt/: __init__.py  converter.py  nbt.py
mcfpp/lib/tree/: __init__.py  alias.py  file.py  node.py
mcfpp/std/delayed_load/: modules.py
mcfpp/std/registry/: __init__.py  modules.py
mcfpp/utils/: __init__.py  math.py  placeholders.py  strings.py  vars.py
